Fix ads on iPhone and iPad

--- a/src/scss/plyr-ads.scss
+++ b/src/scss/plyr-ads.scss
@@ -11,16 +11,7 @@
     bottom: 0;
     z-index: 10;
 
-    &__skip-button {
-        position: absolute;
-        z-index: 11;
-        top: 1em;
-        right: 0;
-        border: none;
-        font-size: 1.2em;
-        padding: 10px 20px;
-        background: rgba(40,40,40,.8);
-        color: #fff;
-        display: none;
+    video {
+        left: 0;
     }
 }
